--- a/src/style.css
+++ b/src/style.css
@@ -82,6 +82,7 @@
   padding: 5px;
   border-radius: 5px;
   cursor: pointer;
+  box-shadow: 0px 0px 5px #333;
 }
 .task-container:hover {
   background-color: #f1f1f1;
