--- a/src/style.css
+++ b/src/style.css
@@ -78,8 +78,8 @@
 .task-container {
   background-color: #e6e6e6;
   width: calc(100% - 10px);
-  margin-top: 5px;
-  padding: 5px;
+  margin-top: 25px;
+  padding: 15px;
   border-radius: 5px;
   cursor: pointer;
   box-shadow: 0px 0px 5px #333;
@@ -91,4 +91,9 @@
 .task-description {
   font-size: 15px;
   font:100
+}
+
+.task-title {
+  font-size: 30px;
+  font-weight: bold;
 }
